--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/bulma": "^1.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/pro-duotone-svg-icons": "^5.10.2",
@@ -21,6 +19,9 @@
     "@fortawesome/pro-regular-svg-icons": "^5.10.2",
     "@fortawesome/pro-solid-svg-icons": "^5.10.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@nuxtjs/bulma": "^1.2.1",
+    "bulma-helpers": "^0.3.8",
+    "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.0.8",
     "vue-circular-count-down-timer": "^1.0.4",
