--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.0.8",
     "vue-circular-count-down-timer": "^1.0.4",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.0.7",
+    "sass-loader": "^7.3.1"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "node-sass": "^4.12.0",
     "vue-jest": "^4.0.0-0"
   }
 }
